--- a/components/PhotoGallery/photogallery.scss
+++ b/components/PhotoGallery/photogallery.scss
@@ -42,10 +42,15 @@
         transition: all 0.2s ease-out;
     }
 
-    &:hover::before,
-    &:focus::before,
     &.active::before {
         width: 75%;
+    }
+
+    @media (min-width: 480px) {
+        &:hover::before,
+        &:focus::before {
+            width: 75%;
+        }
     }
 
     sup {
